# glog

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  logging.cc
vsprojects/libglog/VC10/: libglog.vcxproj
vsprojects/libglog/VC11/: libglog.vcxproj
vsprojects/libglog/VC12/: libglog.vcxproj
